<resources>
    <string name="app_name">FastCredit</string>
    <string-array name="countries" formatted="false" translatable="false">
        <item>"Выбор страны"</item>
        <!--<item>Afghanistan</item>-->
        <!--/<item>Albania</item>-->
        <!--<item>Algeria</item>-->
        <!--<item>American Samoa</item>-->
        <!--<item>Andorra</item>-->
        <!--<item>Angola</item>-->
        <!--<item>Antigua and Barbuda</item>-->
        <item>Аргентина</item>
        <item>Армения</item>
        <!--<item>Aruba</item>-->
        <item>Австралия</item>
        <!--<item>Austria</item>-->
        <!--<item>Azerbaijan</item>-->
        <!--<item>Bahamas</item>-->
        <!--<item>Bahrain</item>-->
        <!--<item>Bangladesh</item>-->
        <!--<item>Barbados</item>-->
        <!--<item>Belarus</item>-->
        <!--<item>Belgium</item>-->
        <!--<item>Belize</item>-->
        <!--<item>Benin</item>-->
        <!--<item>Bermuda</item>-->
        <!--<item>Bhutan</item>-->
        <!--<item>Bolivia</item>-->
        <!--<item>Bosnia and Herzegovina</item>-->
        <!--<item>Botswana</item>-->
        <!--<item>Brazil</item>-->
        <!--<item>British Virgin Islands</item>-->
        <!--<item>Brunei</item>-->
        <item>Болгария</item>
        <!--<item>Burkina Faso</item>-->
        <!--<item>Burundi</item>-->
        <!--<item>Cambodia</item>-->
        <!--<item>Cameroon</item>-->
        <item>Канада</item>
        <!--<item>Canary Islands</item>-->
        <!--<item>Cape Verde</item>-->
        <!--<item>Cayman Islands</item>-->
        <!--<item>Central African Republic</item>-->
        <!--<item>Ceuta and Melilla</item>-->
        <!--<item>Chad</item>-->
        <!--<item>Chile</item>-->
        <!--<item>China</item>-->
        <item>Колумбия</item>
        <!--<item>Comoros</item>-->
        <!--<item>Congo [DRC]</item>-->
        <!--<item>Congo [Republic]</item>-->
        <!--<item>Costa Rica</item>-->
        <item>Хорватия</item>
        <!--<item>Cuba</item>-->
        <!--<item>Curaçao</item>-->
        <!--<item>Cyprus</item>-->
        <item>Чехословакия</item>
        <!--<item>Côte d’Ivoire</item>-->
        <item>Дания</item>
        <!--<item>Djibouti</item>-->
        <!--<item>Dominica</item>-->
        <item>Доминиканская Республика</item>
        <!--<item>Ecuador</item>-->
        <!--<item>Egypt</item>-->
        <!--<item>El Salvador</item>-->
        <!--<item>Equatorial Guinea</item>-->
        <!--<item>Eritrea</item>-->
        <item>Эстония</item>
        <!--<item>Ethiopia</item>-->
        <!--<item>Europe</item>-->
        <!--<item>Faroe Islands</item>-->
        <!--<item>Fiji</item>-->
        <item>Финляндия</item>
        <!--<item>France</item>-->
        <!--<item>French Guiana</item>-->
        <!--<item>French Polynesia</item>-->
        <!--<item>Gabon</item>-->
        <!--<item>Gambia</item>-->
        <item>Грузия</item>
        <item>Германия</item>
        <!--<item>Ghana</item>-->
        <!--<item>Gibraltar</item>-->
        <!--<item>Greece</item>-->
        <!--<item>Greenland</item>-->
        <!--<item>Grenada</item>-->
        <!--<item>Guadeloupe</item>-->
        <!--<item>Guam</item>-->
        <!--<item>Guatemala</item>-->
        <!--<item>Guernsey</item>-->
        <!--<item>Guinea</item>-->
        <!--<item>Guinea-Bissau</item>-->
        <!--<item>Guyana</item>-->
        <!--<item>Haiti</item>-->
        <!--<item>Honduras</item>-->
        <!--<item>Hong Kong</item>-->
        <item>Венгрия</item>
        <!--<item>Iceland</item>-->
        <!--<item>India</item>-->
        <item>Индонезия</item>
        <!--<item>Iran</item>-->
        <!--<item>Iraq</item>-->
        <!--<item>Ireland</item>-->
        <!--<item>Isle of Man</item>-->
        <!--<item>Israel</item>-->
        <!--<item>Italy</item>-->
        <!--<item>Jamaica</item>-->
        <!--<item>Japan</item>-->
        <!--<item>Jersey</item>-->
        <!--<item>Jordan</item>-->
        <item>Казахстан</item>
        <!--<item>Kenya</item>-->
        <!--<item>Kiribati</item>-->
        <!--<item>Kuwait</item>-->
        <!--<item>Kyrgyzstan</item>-->
        <!--<item>Laos</item>-->
        <!--<item>Latin America</item>-->
        <item>Латвия</item>
        <!--<item>Lebanon</item>-->
        <!--<item>Lesotho</item>-->
        <!--<item>Liberia</item>-->
        <!--<item>Libya</item>-->
        <!--<item>Liechtenstein</item>-->
        <item>Литва</item>
        <!--<item>Luxembourg</item>-->
        <!--<item>Macau</item>-->
        <!--<item>Macedonia [FYROM]</item>-->
        <!--<item>Madagascar</item>-->
        <!--<item>Malawi</item>-->
        <!--<item>Malaysia</item>-->
        <!--<item>Mali</item>-->
        <!--<item>Malta</item>-->
        <!--<item>Marshall Islands</item>-->
        <!--<item>Martinique</item>-->
        <!--<item>Mauritania</item>-->
        <!--<item>Mauritius</item>-->
        <!--<item>Mayotte</item>-->
        <item>Мексика</item>
        <!--<item>Micronesia</item>-->
        <item>Молдавия</item>
        <!--<item>Monaco</item>-->
        <!--<item>Mongolia</item>-->
        <!--<item>Montenegro</item>-->
        <!--<item>Morocco</item>-->
        <!--<item>Mozambique</item>-->
        <!--<item>Myanmar [Burma]</item>-->
        <!--<item>Namibia</item>-->
        <!--<item>Nepal</item>-->
        <!--<item>Netherlands</item>-->
        <!--<item>New Caledonia</item>-->
        <!--<item>New Zealand</item>-->
        <!--<item>Nicaragua</item>-->
        <!--<item>Niger</item>-->
        <!--<item>Nigeria</item>-->
        <!--<item>North Korea</item>-->
        <!--<item>Northern Mariana Islands</item>-->
        <item>Норвегия</item>
        <!--<item>Oman</item>-->
        <!--<item>Pakistan</item>-->
        <!--<item>Palau</item>-->
        <!--<item>Palestine</item>-->
        <item>Панама</item>
        <!--<item>Papua New Guinea</item>-->
        <!--<item>Paraguay</item>-->
        <!--<item>Peru</item>-->
        <!--<item>Philippines</item>-->
        <item>Польша</item>
        <!--<item>Portugal</item>-->
        <!--<item>Puerto Rico</item>-->
        <!--<item>Qatar</item>-->
        <!--<item>Romania</item>-->
        <item>Румыния</item>
        <item>Россия</item>
        <!--<item>Rwanda</item>-->
        <!--<item>Réunion</item>-->
        <!--<item>Saint Barthélemy</item>-->
        <!--<item>Saint Kitts and Nevis</item>-->
        <!--<item>Saint Lucia</item>-->
        <!--<item>Saint Martin</item>-->
        <!--<item>Saint Vincent and the Grenadines</item>-->
        <!--<item>Samoa</item>-->
        <!--<item>San Marino</item>-->
        <!--<item>Saudi Arabia</item>-->
        <!--<item>Senegal</item>-->
        <!--<item>Serbia</item>-->
        <!--<item>Seychelles</item>-->
        <!--<item>Sierra Leone</item>-->
        <!--<item>Singapore</item>-->
        <!--<item>Sint Maarten</item>-->
        <!--<item>Slovakia</item>-->
        <!--<item>Slovenia</item>-->
        <!--<item>Solomon Islands</item>-->
        <!--<item>Somalia</item>-->
        <!--<item>South Africa</item>-->
        <!--<item>South Korea</item>-->
        <!--<item>South Sudan</item>-->
        <!--<item>Spain</item>-->
        <!--<item>Sri Lanka</item>-->
        <!--<item>Sudan</item>-->
        <!--<item>Suriname</item>-->
        <!--<item>Swaziland</item>-->
        <item>Швеция</item>
        <!--<item>Switzerland</item>-->
        <!--<item>Syria</item>-->
        <!--<item>São Tomé and Príncipe</item>-->
        <!--<item>Taiwan</item>-->
        <!--<item>Tanzania</item>-->
        <!--<item>Thailand</item>-->
        <!--<item>Timor-Leste</item>-->
        <!--<item>Togo</item>-->
        <!--<item>Tonga</item>-->
        <!--<item>Trinidad and Tobago</item>-->
        <!--<item>Tunisia</item>-->
        <!--<item>Turkey</item>-->
        <!--<item>Turks and Caicos Islands</item>-->
        <!--<item>U.S. Outlying Islands</item>-->
        <!--<item>U.S. Virgin Islands</item>-->
        <!--<item>Uganda</item>-->
        <item>Украина</item>
        <!--<item>United Arab Emirates</item>-->
        <item>Англия</item>
        <item>США</item>
        <!--<item>Uruguay</item>-->
        <!--<item>Uzbekistan</item>-->
        <!--<item>Vanuatu</item>-->
        <!--<item>Venezuela</item>-->
        <!--<item>Vietnam</item>-->
        <!--<item>Western Sahara</item>-->
        <!--<item>Yemen</item>-->
        <!--<item>Zambia</item>-->
        <!--<item>Zimbabwe</item>-->
        <!--<item>Åland Islands</item>-->
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="interest_rate">Interest description</string>
    <string name="value_sum">Value title</string>
    <string name="value_rate">Value rate</string>
    <string name="value_term">Value term</string>
    <string name="description">Description</string>
    <string name="choice_country">Выбор страны</string>
    <string name="loans_mfis">Займы</string>
    <string name="credits">Кредиты</string>
    <string name="maps">Кредитные карты</string>
    <string name="number_of_months">Количество месяцев</string>
    <string name="credit_amount">Сумма кредита</string>
    <string name="result">Результат</string>
    <string name="monthly_payment">Ежемесячный платеж</string>
    <string name="cards">Карты</string>
    <string name="sum">Сумма кредита</string>
    <string name="rate">Процентная ставка</string>
    <string name="term">Срок кредита</string>
    <string name="apply_for_a_loan">Получить займ</string>
    <string name="credit_calculator">Кредитный калькулятор</string>
    <string name="other">Другое</string>
    <string name="reset">Сброс</string>
    <string name="issue_a_card">Получить карту</string>
    <string name="more">Подробнее</string>
    <string name="nul">0</string>
    <string name="total_sum">Общая сумма</string>
    <string name="apply_for_a_credit">Получить кредит</string>
    <string name="name_app">Займы, кредиты и финансы</string>

    <string name="facebook_app_id">490875534767639</string>
    <!--<string name="fb_login_protocol_scheme">fb311149912819366</string>-->

</resources>
