<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/money">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCredit_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:hint="@string/credit_amount"
            android:inputType="number"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etNumber_of_months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:hint="@string/number_of_months"
            android:inputType="number"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/click" />

        <Button
            android:id="@+id/bReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="24dp"
            android:text="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/twMonthly_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/monthly_payment"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/twInterest_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:hint="@string/value_rate"
            android:inputType="number"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>