<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/twTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="24dp"
        android:hint="@string/title"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/twDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="14dp"
        android:hint="@string/description"
        android:textColor="@android:color/background_dark" />

    <ImageView
        android:id="@+id/icon_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/twLoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/apply_for_a_loan"
        android:textColor="@android:color/background_dark" />



</LinearLayout>
