<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/twTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:hint="@string/title"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/twDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:hint="@string/description"

        android:textColor="@android:color/background_dark"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/icon_card"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"

        android:src="@drawable/oneclickmoney" />
</RelativeLayout>

    <TextView
        android:id="@+id/twCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_button"
        android:gravity="center"
        android:text="@string/issue_a_card"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp" />



</LinearLayout>